--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -93,8 +93,9 @@ section {
 }
 
 .intro_sec .h_bg-image {
-    background-size: cover;
+    background-size: contain;
     background-position: center;
+    background-repeat: no-repeat;
     min-height: 700px;
     position: relative;
 }
@@ -204,7 +205,7 @@ section {
     border-radius: 100%;
     /* mix-blend-mode: multiply; */
     background-color: #2f514e;
-    z-index: 9999999999;
+    z-index: 100;
     display: flex;
     align-items: center;
     flex-direction: column;
